--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,25 @@
     "version": "0.2.0",
     "configurations": [
         {
-             "name": "Debug con entrada redirigida (Windows)",
-            "type": "cppvsdbg",
+            "name": "Depurar C++ con WSL",
+            "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}\\programa.exe",
-            "args": [],
-            "cwd": "${workspaceFolder}",
-            "console": "integratedTerminal",
-            "runtimeExecutable": "cmd.exe",
-            "runtimeArgs": ["/C", "${workspaceFolder}\\programa.exe < ${workspaceFolder}\\datos.txt"],
+            "program": "${fileDirname}/${fileBasenameNoExtension}.out",
+            "args": ["../in"],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "miDebuggerPath": "/usr/bin/gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "Compilar C++"
         }
     ]
 }
